# RER-API-wrapper

./: .gitignore  GMAIL_SETUP.md  README.md  auth.py  check_password.py  diagnose_gmail.py  enable_gmail_api.py  fix_oauth_error.py  gmail.py  openapi.yaml  pyproject.toml  retrieve_gmail_messages.py  retrieve_gmail_messages_api.py  setup_gmail_oauth.py  test_gmail_auth.py  test_oauth_methods.py
src/: auth.py  gmail.py  rer.py  rer_html.py  rer_parsing.py
test/rer-html/: _auth.py  _inspect_certs.py  _inspect_station.py  fetch_certificates.py  fetch_organisation.py  fetch_organisation_output_data.py  fetch_organisation_station_declarations.py  fetch_user_activity.py  fetch_user_dashboard.py  fetch_user_notifications.py  fetch_user_ownership.py
test/rer-python/: test_find_organisation.py  test_organisation.py  test_organisation_certificates.py  test_organisation_certificates_breakdown.py  test_organisation_certificates_history.py  test_organisation_output_data.py  test_organisation_station_declarations.py  test_organisation_stations.py  test_station.py  test_user.py  test_user_activity.py  test_user_dashboard.py  test_user_notifications.py  test_user_organisations.py  test_user_ownership.py
